<resources>
    <string name="app_name">环卫巡查监督</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gongneng">功能</string>
    <string name="shouye">首页</string>
    <string name="discuss">论坛</string>
    <string name="chat">聊天</string>
    <string name="wode">我的</string>

    <!-- LoginActivity-->
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="login">登 录</string>
    <string name="regsister">注 册</string>
    <string name="logining">登录中…</string>
    <string name="title_activity_patrol_list">PatrolListActivity</string>
    <string name="title_activity_patrol_detail">PatrolDetailActivity</string>

    <!-- map-->
    <string name="title_activity_customer_login">乘客登录</string>
    <string name="title_activity_driver_login">司机登录</string>
    <string name="title_activity_customer_menu">Dawn</string>
    <string name="title_activity_driver_menu">司机</string>
    <string name="title_activity_my_location">MyLocation</string>
    <string name="title_activity_route_guide">路线规划</string>
    <string name="title_activity_view_page">ViewPage</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
</resources>
