<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.tools.FullScreenVideoView
        android:id="@+id/login_video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/login_iv_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/login_video_image"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#42ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="36dp"
                android:paddingTop="56dp"
                android:layout_centerInParent="true" />

            <EditText
                android:id="@+id/username"
                style="@style/login_editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_textview_high"
                android:hint="@string/Username" />

            <EditText
                android:id="@+id/password"
                style="@style/login_editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_textview_high"
                android:hint="@string/Password"
                android:inputType="numberPassword" />

            <Button
                android:id="@+id/zhuce"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_high"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/login_button_bg"
                android:gravity="center"
                android:text="@string/regsister"
                android:textColor="@color/allWhite"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

